perf(tomcat): modify $JAVA_OPTS
- increase heap size
- use parallel garbage collector
- make $JAVA_OPTS modifyable via $JAVA_OPTS_EXT in `configuration.yml`

Signed-off-by: Maximilian Huber <external.maximilian.huber2@bosch-si.com>